fix Services items is not align in center

--- a/src/styles/Services.module.css
+++ b/src/styles/Services.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   width: 100%;
   height: 546.20px;
   background-color: white;
@@ -52,7 +53,8 @@
   justify-content: center;
   align-items: center;
   gap: 10px;
-  opacity: 0
+  opacity: 0;
+  width: calc(100% / 3)
   
 }
 
@@ -87,8 +89,8 @@
 .containerSvg h3 {
   font-size: 19px;
   letter-spacing: 1px
-
 }
+
 
 .containerSvg h4 {
   text-align: center;
